# TensorRT-Cpp-with-Tars

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
client/cpp/: CMakeLists.txt  README.md  conanfile.txt  example.cpp
client/javascript/: README.md  example.js
client/python/: README.md  example.py
model/: CMakeLists.txt  config.json
model/plugin/: yololayer.cu
model/src/: config.bak.h  cuda_utils.h  inference.cpp  inference.h  logging.h  model.cpp  model.h  postprocess.cpp  postprocess.h  preprocess.cu  types.h  utils.h
server/: CMakeLists.txt
server/include/: ConvertImage.h  Yolov5Http.h  Yolov5HttpImp.h  Yolov5HttpServer.h
server/src/: ConvertImage.cpp  Yolov5HttpImp.cpp  Yolov5HttpServer.cpp
